# torchmodels

./: .gitignore  CHANGELOG.md  README.md  hubconf.py  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_mlp.py  test_unet.py  utils.py
torchmodels/: __init__.py  mlp.py  unet.py
